<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btnForward"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/btnForward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listviewPaired" />
    <Button
        android:id="@+id/btnLeft"
        android:text="@string/btnLeft"
        android:layout_width="120dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForward"
        />
    <Button
        android:id="@+id/btnStop"
        android:text="@string/btnStop"
        android:layout_width="120dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="@id/btnForward"
        app:layout_constraintLeft_toRightOf="@id/btnLeft"
        app:layout_constraintTop_toBottomOf="@id/btnForward"
        />
    <Button
        android:id="@+id/btnRight"
        android:text="@string/btnRight"
        android:layout_width="120dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toRightOf="@id/btnStop"
        app:layout_constraintTop_toBottomOf="@id/btnForward"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnBack"
        android:text="@string/btnBack"
        android:layout_width="120dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStop"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>